--- a/runbot/views/runbot_template.xml
+++ b/runbot/views/runbot_template.xml
@@ -57,11 +57,13 @@
                             <!-- /.box-header -->
                             <div class="box-body table-responsive no-padding">
                                 <table class="table table-hover">
-                                    <tbody>
+                                    <thead>
                                         <tr>
                                             <th>Name</th>
                                             <th>Hosted on</th>
                                         </tr>
+                                    </thead>
+                                    <tbody>
                                         <t t-foreach="repos" t-as="repo">
                                             <tr>
                                                 <td>
@@ -82,6 +84,7 @@
                 </div>
             </t>
         </template>
+
         <!--Runbot repository page-->
         <template id="runbot.repo" name="Repository">
             <t t-call='runbot.layout'>
@@ -104,12 +107,14 @@
                             <!-- /.box-header -->
                             <div class="box-body table-responsive no-padding">
                                 <table class="table table-hover">
-                                    <tbody>
+                                    <thead>
                                         <tr>
                                             <th style="width:30px"></th>
                                             <th style="width:200px">Name</th>
                                             <th>Builds</th>
                                         </tr>
+                                    </thead>
+                                    <tbody>
                                         <t t-foreach="branches" t-as="branch">
                                             <tr t-if="branch.is_sticky or branch.build_ids">
                                                 <td>
